<resources>
    <string name="app_name">Notificaciones</string>
    <string name="titulo">EJEMPLOS DE NOTIFICACIÓN</string>
    <string name="basica">Básica</string>
    <string name="toque">Acción de toque</string>
    <string name="activity1">Acción al tocar la activity</string>
    <string name="accion">Botón de acción</string>
    <string name="si">Aceptar</string>
    <string name="no">Cancelar</string>
    <string name="progreso">Barra de progreso</string>
    <string name="titulo1">Cálculo de Indice de Masa Corporal(IMC)</string>
    <string name="peso">Ingresa peso en kilogramos</string>
    <string name="estatura">Ingresa altura en metros</string>
    <string name="calcular">Calcular</string>
    <string name="titulo2">Registro de cita</string>
    <string name="nombre">Ingresa nombre(s)</string>
    <string name="apellidos">Ingresa apellidos(s)</string>
    <string name="registrar">Registrar</string>
    <string name="titulo3">Información sobre IMC</string>
    <string name="detalle">Para adultos de 20 años o más, el IMC se interpreta usando categorías de estado de peso estándar. Estas categorías son iguales para hombres y mujeres de todos los tipos de cuerpo y edades.</string>
    <string name="detalle2">Las personas obesas y con sobrepeso tienen más probabilidades de sufrir infartos y accidentes cerebrovasculares. La grasa abdominal en particular está relacionada con otros factores de riesgo cardiovascular como la diabetes, la hipertensión, el aumento de la masa cardíaca y el colesterol alto. Todos estos factores de riesgo provocan que el colesterol se acumule en las paredes de las arterias y se creen placas.</string>
</resources>